Added Telegraph case study

--- a/source/index.html
+++ b/source/index.html
@@ -53,13 +53,7 @@
             <a href="#home">Home</a>
           </li>
           <li>
-            <a href="#background">About Me</a>
-          </li>
-          <li>
-            <a href="#portfolio">My Work</a>
-          </li>
-          <li>
-            <a href="#contact">Contact</a>
+            <a href="#portfolio">Work</a>
           </li>
           <li>
             <a href="http://lifeofmle.com/now">Now</a>
@@ -102,6 +96,12 @@
           <li><a class="dark" href="https://medium.com/@Lifeofmle/do-ux-designers-exist-f13b42fda345#.e7ti9s30v" target="_blank">Do UX designers exists?</li>
           <li><a class="dark" href="http://www.slideshare.net/lifeofmle/exploring-design-with-agile" target="_blank">Exploring design with Agile</a> - Slides</li>
         </ul>
+
+        <p class="lead">Design thinking is the process to find solutions</p>
+
+          <p>Although I am an UX designer Omnigraffle and Axure are not the only tools I use. I am always armed with markers and post-it notes for workshops and meetings. I love using Sketch for visual designs. I enjoy paper sketching and Balsamiq for low fidelity concepts. Omnigraffle and Indigo are my tools of choice for wireframing. When it comes to prototyping I like to use the best tool for the job; Axure for simple interactions, Pixate for complex concepts and native code for higher fidelity. I am able to code for the web, Android, and C#/WPF.</p>
+
+          <p>Below is a collection of my work which uses these tools alongside my design process.</p>
       </div>
     </section>
 
@@ -109,15 +109,26 @@
     <section id="portfolio">    
       <div class="portfolio-intro">
         <div class="content">
-          <h1>My Work</h1>
-
-          <p class="lead">Design thinking is the process to find solutions</p>
-
-          <p>Although I am an UX designer Omnigraffle and Axure are not the only tools I use. I am always armed with markers and post-it notes for workshops and meetings. I love using Sketch for visual designs. I enjoy paper sketching and Balsamiq for low fidelity concepts. Omnigraffle and Indigo are my tools of choice for wireframing. When it comes to prototyping I like to use the best tool for the job; Axure for simple interactions, Pixate for complex concepts and native code for higher fidelity. I am able to code for the web, Android, and C#/WPF.</p>
-
-          <p>Below is a collection of my work which uses these tools alongside my design process.</p>
+          <h1>My Work</h1>          
         </div>
       </div>
+
+      <div class="project kounta">
+          <div class="content alternate">
+            <div class="project-image">
+              <img src="assets/images/kounta/kountaipad.png" alt="Kounta iPad" >
+            </div>
+            <div class="project-info">
+              <h2>Design for the masses</h2>
+  
+              <p class="lead">Redesigning the Telegraph website</p>
+  
+              <p>I am currently working on redesigning The Telegraph website. This is a responsive web site responsible for delivering content to millions of visitors every day. My role as a UX designer is helping with bringing in user research and insights to our designs, wireframing and prototyping.<br /><br />I always wanted to work on products that had a positive impact on many people. I am fortunate to be working with a great team and I am extremely proud of the work that we have done so far and will do in the upcoming future.</p>
+  
+              <a href="https://brand.kounta.com/" target="_blank"><button class="dark">Learn about brand update</button></a>
+            </div>
+          </div>
+        </div>
 
       <div class="project telegraph">
         <div class="content">
@@ -131,13 +142,13 @@
 
             <p>I am currently working on redesigning The Telegraph website. This is a responsive web site responsible for delivering content to millions of visitors every day. My role as a UX designer is helping with bringing in user research and insights to our designs, wireframing and prototyping.<br /><br />I always wanted to work on products that had a positive impact on many people. I am fortunate to be working with a great team and I am extremely proud of the work that we have done so far and will do in the upcoming future.</p>
 
-            <a href="http://www.telegraph.co.uk/fashion" target="_blank"><button class="btn-portfolio">View website</button></a>
+            <a href="./telegraph.html" target="_blank"><button>View case study</button></a>
           </div>
         </div>
       </div>
 
       <div class="project investment">
-        <div class="content">
+        <div class="content alternate">
           <div class="project-image">
             <img src="assets/images/PortfolioReportSketch.png" alt="Portfolio Report" >
           </div>
@@ -188,6 +199,13 @@
         </div>
       </div>
 
+      <div class="portfolio-intro">
+        <div class="content">
+          <h1>Some extra bits</h1>
+        </div>
+      </div>
+
+      <!--
       <div class="project banking">
         <div class="content">
           <div class="project-image">
@@ -372,7 +390,16 @@
           </div>
         </div>
       </div>
+
+      -->
     </section>
+
+    <section id="background">
+        <div class="content">
+  
+          <p class="lead">Dribbble and Navibaby</p>
+        </div>
+      </section>
 
     <!-- ==============================================
     CONTACT
@@ -387,7 +414,6 @@
           <li><a href="mailto:le.michael@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw"></i></a></li>
           <li><a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a></li>
           <li><a href="https://twitter.com/lifeofmle" target="_blank"><i class="fa fa-twitter fa-fw"></i></a></li>
-          <li><a href="http://instagram.com/lifeofmle" target="_blank"><i class="fa fa-instagram fa-fw"></i></a></li>
         </ul>
       </div>
     </section>
@@ -402,7 +428,7 @@
     <!-- ==============================================
     Fonts
     =============================================== -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <!-- ==============================================
     SCRIPTS
