--- a/source/now.html
+++ b/source/now.html
@@ -26,7 +26,7 @@
     <!-- ==============================================
     Fonts
     =============================================== -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- Google Analytics -->
@@ -60,13 +60,7 @@
             <a href="http://lifeofmle.com#home">Home</a>
           </li>
           <li>
-            <a href="http://lifeofmle.com#background">About Me</a>
-          </li>
-          <li>
-            <a href="http://lifeofmle.com#portfolio">My Work</a>
-          </li>
-          <li>
-            <a href="http://lifeofmle.com#contact">Contact</a>
+            <a href="http://lifeofmle.com#portfolio">Work</a>
           </li>
           <li>
             <a href="http://lifeofmle.com/now">Now</a>
@@ -84,6 +78,14 @@
 
         <p class="lead">The resume and portfolio tells the world of what you did. These are the things I am looking focusing on at the moment</p>
 
+        <p><strong>May 20 2018</strong></p>
+        <ul>
+          <li>Leading a team with UX and design</li>
+          <li>Finding time to exercise</li>
+          <li>Updating my online presence with design related stuff</li>
+        </ul>
+
+        <p><strong>October 1 2016</strong></p>
         <ul>
           <li>Being a good father to my baby daughter</li>
           <li>Releasing a travel app for parents with babies: <a class="dark" href="http://www.navibaby.com">Navibaby</a></li>
@@ -91,12 +93,10 @@
           <li>Reading the following books: the Bible, "Letters to a Stoic" and "Thinking, Fast and Slow"</li>
         </ul>
 
-
         <br />
 
         <p>This page was inspired by <a class="dark" href="https://sivers.org/nowff">Derek Sivers</a>.</p>
 
-        <p><strong>Last updated:</strong> October 1 2016</p>
       </div>
     </section>
 
