Added dribbble links

--- a/source/index.html
+++ b/source/index.html
@@ -369,12 +369,21 @@
       -->
     </section>
 
-    <section id="background">
-        <div class="content">
-  
-          <p class="lead">Dribbble and Navibaby</p>
+    <section id="dribbble">
+      <div class="content">
+        <div class="gallery">
+          <a class="one" href="https://dribbble.com/shots/4608271-Phone-usage" target="_blank">
+            <img src="https://cdn.dribbble.com/users/304265/screenshots/4608271/dribbble-orange_1x.png" />
+          </a>
+          <a class="two" href="https://dribbble.com/shots/4608315-Navibaby-transport-icons" target="_blank">
+            <img src="https://cdn.dribbble.com/users/304265/screenshots/4608315/navibaby_1x.png" />
+          </a>
+          <a class="three" href="https://dribbble.com/shots/4608285-Property-app" target="_blank">
+            <img src="https://cdn.dribbble.com/users/304265/screenshots/4608285/dribbble-valuation_1x.png" />
+          </a>
         </div>
-      </section>
+      </div>
+    </section>
 
     <!-- ==============================================
     CONTACT
