Update with Navibaby article

--- a/source/index.html
+++ b/source/index.html
@@ -95,6 +95,7 @@
           <ul>
             <li><a class="dark" href="https://medium.com/@Lifeofmle/aligning-impact-from-boardrooms-to-pixels-3b50490a3c3c">Using OKRs for aligning impact from boardrooms to pixels (talk)</a></li>
             <li><a class="dark" href="https://medium.com/@Lifeofmle/notes-from-prototyping-with-framer-b07813dc945d">Prototyping with Framer (talk)</a></li>
+            <li><a class="dark" href="https://medium.com/navibaby/building-an-app-to-travel-with-your-baby-d953964f1fc5">Building a travel app for parents with babies (personal project)</a></li>
             <li><a class="dark" href="https://medium.com/@Lifeofmle/what-is-good-design-5e1e9a5c38d0#.zhcxz6mtk" target="_blank">What is good design?</a></li>
             <li><a class="dark" href="https://medium.com/@Lifeofmle/do-ux-designers-exist-f13b42fda345#.e7ti9s30v" target="_blank">Do UX designers exists?</li>
             <li><a class="dark" href="http://www.slideshare.net/lifeofmle/exploring-design-with-agile" target="_blank">Exploring design with Agile</a> - Slides</li>
