--- a/source/index.html
+++ b/source/index.html
@@ -109,7 +109,7 @@
     <section id="portfolio">    
       <div class="portfolio-intro">
         <div class="content">
-          <h1>My Work</h1>          
+          <h1>Selected work</h1>          
         </div>
       </div>
 
