--- a/source/kounta.html
+++ b/source/kounta.html
@@ -6,7 +6,7 @@
     Title and Meta Tags
     =============================================== -->
     <meta charset="utf-8">
-    <title>Michael Le - Delivering</title>
+    <title>Michael Le - Kounta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="noindex">
@@ -72,9 +72,9 @@
       </div>
     </nav>
 
-    <section class="caseStudy hero delivering">
-        <h1>Helping answering where's my order?</h1>
-        <img src="assets/images/delivering/deliverylookup.png" alt="People looking at phones for orders" />
+    <section class="caseStudy hero kounta">
+        <h1>Unifying brand and product</h1>
+        <img src="assets/images/kounta/kountaipad.png" alt="Kounta on iPad" />
     </section>
 
     <section class="caseStudy">
@@ -83,13 +83,15 @@
                 <div class="content">
 
                     <div class="words">
-                        <p>This case study was chosen to highlight workshop skills and importance of going out to see your users.</p>
+                        <p>This case study was chosen of a large project handled in a short time.</p>
 
                         <h2>The Brief</h2>
                 
                         <p>While working for Pivotal Labs, I had the opportunity to work with an online food delivery company.</p>
                         
                         <p>The product team that I worked with was trying to solve the issue of "Where is my order?" because it was the cause of a large volume of support calls and the business felt there were some opportunities to fix it.</p>
+
+                        <a href="https://brand.kounta.com/" target="_blank"><button class="dark">Learn about brand update</button></a>
                     </div>
 
                     <div class="words">
