--- a/source/now.html
+++ b/source/now.html
@@ -9,6 +9,7 @@
     <title>Michael Le - Now</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="noindex">
 
     <!-- ==============================================
     Favicons
