Update case study

--- a/source/index.html
+++ b/source/index.html
@@ -115,7 +115,7 @@
               <p>Helping the product team connect with restaurant & hospitality customers and learn how they use our product. 
                 Leading the design system efforts along with the engineering team using React for delivering a consistent experience for our customers.</p>  
   
-                <a href="https://brand.kounta.com/" target="_blank"><button>Learn about brand update</button></a>
+                <a href="./kounta.html" target="_blank"><button>View case study</button></a>
             </div>
           </div>
         </div>
