Add onward journeys

--- a/source/kounta.html
+++ b/source/kounta.html
@@ -189,6 +189,50 @@
                             All of this work could not have been done without the help of our engineers, support staff testing and documenting the changes, QA engineers ensuring we maintained quality, product owners who know the product inside and out, and senior management for their support and understanding.
                         </p>
                     </div>
+
+                    <div class="words">
+                        <h2>Discover more</h2>
+                </div>
+                <div class="articles">
+                        <div
+                          class="card"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="https://brand.kounta.com/" target="_blank">
+                            <div>
+                                <img src="assets/images/kounta/chameleon.png" width="100%" />
+                                <h2>Kounta brand story</h2>
+                            </div>
+                          </a>
+                        </div>
+                        <div
+                          class="card"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="https://medium.com/@Lifeofmle/framing-design-problems-with-3-questions-9c01459e386c" target="_blank">
+                            <div>
+                                <img src="https://cdn-images-1.medium.com/max/2000/1*2oa6gxrRYzGywcinDQGkdg.png" width="100%" />
+                                <h2>Framing design problems</h2>
+                            </div>
+                          </a>
+                        </div>
+                        <div
+                          class="card next"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="./telegraph.html">
+                            <div>
+                                <div class="titleArea">
+                                    <h4>Next case study</h4><i class="fa fa-arrow-right"></i>
+                                </div>
+                                <h2>Designing for the masses</h2>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
                 </div>
         </div>
     </section>
