--- a/source/delivering.html
+++ b/source/delivering.html
@@ -152,7 +152,54 @@
                             The moral of the story is that you should always try to test your prototypes in the context of the users.
                         </p>
                     </div>
+
+                    <div class="words">
+                        <h2>Discover more</h2>
                 </div>
+                <div class="articles">
+                        <div
+                          class="card"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="https://uxdesign.cc/asking-the-better-questions-f9a43b72c1a9" target="_blank">
+                            <div>
+                                <img src="https://cdn-images-1.medium.com/max/1600/1*0oXSzx7vCxwONZdwNU33HQ.png" width="100%" />
+                                <h2>Asking better questions</h2>
+                            </div>
+                          </a>
+                        </div>
+                        <div
+                          class="card"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="https://medium.com/@Lifeofmle/deciding-on-features-c8d83e31db6e" target="_blank">
+                            <div>
+                                <img src="https://cdn-images-1.medium.com/max/1600/1*bHOkZKf2a57v_YKOMQegaw.png" width="100%" />
+                                <h2>Deciding on features</h2>
+                            </div>
+                          </a>
+                        </div>
+                        <div
+                          class="card next"
+                          data-aos="fade-up"
+                          data-aos-duration="1000"
+                          data-aos-easing="ease-out-quad">
+                          <a class="dark" href="./telegraph.html">
+                            <div>
+                                <div class="titleArea">
+                                    <h4>Next case study</h4><i class="fa fa-arrow-right"></i>
+                                </div>
+                                <h2>Design for the masses</h2>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                </div>
+
+                
         </div>
     </section>
 
