--- a/source/telegraph.html
+++ b/source/telegraph.html
@@ -201,10 +201,10 @@
                               data-aos="fade-up"
                               data-aos-duration="1000"
                               data-aos-easing="ease-out-quad">
-                              <a class="dark" href="https://medium.com/@Lifeofmle/why-i-became-a-ux-designer-f5581fe3e0d" target="_blank">
+                              <a class="dark" href="https://medium.com/@Lifeofmle/learnings-from-testing-at-scale-5765d15f1d" target="_blank">
                                 <div>
-                                    <h2>Why I am UX designer</h2>
-                                    <p class="caption">The part of the job that I enjoyed the most is gathering information on problem and discovering what the solution should be.</p>
+                                    <img src="https://cdn-images-1.medium.com/max/1600/1*2Ptdfo9VgUM__Jyg-MhPGQ.png" width="100%" />
+                                    <h2>Learnings from testing at scale</h2>
                                 </div>
                               </a>
                             </div>
@@ -213,22 +213,25 @@
                               data-aos="fade-up"
                               data-aos-duration="1000"
                               data-aos-easing="ease-out-quad">
-                              <a class="dark" href="https://medium.com/@Lifeofmle/framing-design-problems-with-3-questions-9c01459e386c" target="_blank">
+                              <a class="dark" href="https://medium.com/@Lifeofmle/looking-back-on-working-at-the-telegraph-55df37694e90" target="_blank">
                                 <div>
-                                    <h2>Framing design problems</h2>
-                                    <p class="caption">You can’t apply one process to different kinds of problems. This is my way of choosing between different methodologies out there</p>
+                                    <img src="https://cdn-images-1.medium.com/max/1600/1*QjDf2Olg2ZNvcEOyPreyLw.png" width="100%" />
+                                    <h2>Looking back on working at the Telegraph</h2>
                                 </div>
                               </a>
                             </div>
                             <div
-                              class="card"
+                              class="card next"
                               data-aos="fade-up"
                               data-aos-duration="1000"
                               data-aos-easing="ease-out-quad">
-                              <a class="dark" href="https://medium.com/@Lifeofmle/its-okay-to-use-both-personas-and-jtbd-75880d4a2949" target="_blank">
+                              <a class="dark" href="./kounta.html">
                                 <div>
-                                    <h2>Personas and Jobs to be done</h2>
-                                    <p class="caption">Many JTBD practitioners say that you don’t need personas anymore. In my personal experience I would say that both work well together.</p>
+                                    <div class="titleArea">
+                                        <h4>Next case study</h4><i class="fa fa-arrow-right"></i>
+                                    </div>                                    
+                                    <h2>Unifying brand and product</h2>
+                                    
                                 </div>
                               </a>
                             </div>
