--- a/source/delivering.html
+++ b/source/delivering.html
@@ -186,12 +186,12 @@
                           data-aos="fade-up"
                           data-aos-duration="1000"
                           data-aos-easing="ease-out-quad">
-                          <a class="dark" href="./telegraph.html">
+                          <a class="dark" href="./kounta.html">
                             <div>
                                 <div class="titleArea">
                                     <h4>Next case study</h4><i class="fa fa-arrow-right"></i>
                                 </div>
-                                <h2>Design for the masses</h2>
+                                <h2>Unifying brand and product</h2>
                             </div>
                           </a>
                         </div>
