--- a/source/telegraph.html
+++ b/source/telegraph.html
@@ -216,7 +216,7 @@
                               <a class="dark" href="https://medium.com/@Lifeofmle/looking-back-on-working-at-the-telegraph-55df37694e90" target="_blank">
                                 <div>
                                     <img src="https://cdn-images-1.medium.com/max/1600/1*QjDf2Olg2ZNvcEOyPreyLw.png" width="100%" />
-                                    <h2>Looking back on working at the Telegraph</h2>
+                                    <h2>Looking back at the Telegraph</h2>
                                 </div>
                               </a>
                             </div>
@@ -225,13 +225,12 @@
                               data-aos="fade-up"
                               data-aos-duration="1000"
                               data-aos-easing="ease-out-quad">
-                              <a class="dark" href="./kounta.html">
+                              <a class="dark" href="./delivering.html">
                                 <div>
                                     <div class="titleArea">
                                         <h4>Next case study</h4><i class="fa fa-arrow-right"></i>
-                                    </div>                                    
-                                    <h2>Unifying brand and product</h2>
-                                    
+                                    </div>
+                                    <h2>Helping internal and external user</h2>
                                 </div>
                               </a>
                             </div>
@@ -239,8 +238,6 @@
 
 
                 </div>
-
-                
         </div>
     </section>
 
