Update text about framing design

--- a/source/index.html
+++ b/source/index.html
@@ -180,7 +180,7 @@
                 <a class="dark" href="https://medium.com/@Lifeofmle/framing-design-problems-with-3-questions-9c01459e386c" target="_blank">
                   <div>
                       <h2>Framing design problems</h2>
-                      <p class="caption">You can’t apply one process to different kinds of problems. This is my way of choosing between different methodologies out there.</p>
+                      <p class="caption">My design process depends on current data and complexity to choose the right design methodology.</p>
                   </div>
                 </a>
               </div>
