--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Feel free to say hi on Twitter @lifeofmle
     </nav>
 
     <!-- HERO -->
-    <div id="hero" data-aos="hero-fade" data-aos-anchor="#main">
+    <div id="hero" data-aos="hero-fade" data-aos-anchor="#main" data-aos-anchor-placement="top-center">
       <div class="blob blob1">
         <div class="blobLabel">Code</div>
         <img src="assets/images/blob1.svg">
