Fix font sizing and footer content

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Feel free to say hi on Twitter @lifeofmle
         </div>
       </div>
       <p class="caption">Hand crafted in Sydney</p>
-      <p class="caption">Blobs inspired by <a href="https://vimeo.com/358956867" target="_blank">Jack Lo Russo’s talk</a> and implementation by <a href="https://codepen.io/notwaldorf/pen/omXwzw" target="_blank">Monica Dinculescu</a>.</p>
+      <p class="caption">Blobs inspired by <a href="https://vimeo.com/358956867" target="_blank">Jack Lo Russo</a> and <a href="https://codepen.io/notwaldorf/pen/omXwzw" target="_blank">Monica Dinculescu</a>.</p>
     </footer>
 
     <!-- ==============================================
