Remove blob in mobile and fix code formatting

--- a/index.html
+++ b/index.html
@@ -99,9 +99,16 @@ Feel free to say hi on Twitter @lifeofmle
 
         <div class="content">
           <h2>Designer. Developer. Leader.</h2>
-          <p>I graduated from the University of Waterloo in Computer Engineering and have worked in New York City, London, and now am based in Sydney, Australia.</p>
-          <p>My coding background helps me understand the technical aspects of a project and allows for more options when prototyping solutions.</p>
-          <p>I am a self taught designer with a curious mind and desire to find out the "why" that links people and products. Over the years I have acquired the skills to lead teams with conducting product discovery research, usability testing, quantitative testing (A/B), and visual design from wireframes to polished design assets.</p>
+          <p>I graduated from the University of Waterloo in Computer Engineering
+            and have worked in New York City, London, and now am based in Sydney,
+            Australia.</p>
+          <p>My coding background helps me understand the technical aspects of a
+             project and allows for more options when prototyping solutions.</p>
+          <p>I am a self taught designer with a curious mind and desire to find 
+            out the "why" that links people and products. Over the years I have 
+            acquired the skills to lead teams with conducting product discovery 
+            research, usability testing, quantitative testing (A/B), and visual 
+            design from wireframes to polished design assets.</p>
         </div>
       </section>
 
@@ -112,10 +119,13 @@ Feel free to say hi on Twitter @lifeofmle
             <div class="project-info">
               <h2>Leading and evolving design as a team</h2>
 
-              <p class="lead">Integrating the brand into product so that it is a great experience for the customer.</p>
+              <p class="lead">Integrating the brand into product so that it is a
+                 great experience for the customer.</p>
 
-              <p>Helping the product team connect with restaurant & hospitality customers and learn how they use our product. 
-                Leading the design system efforts along with the engineering team using React for delivering a consistent experience for our customers.</p>  
+              <p>Helping the product team connect with restaurant & hospitality 
+                customers and learn how they use our product. 
+                Leading the design system efforts along with the engineering team
+                using React for delivering a consistent experience for our customers.</p>
             </div>
           </div>
         </div>
@@ -132,9 +142,12 @@ Feel free to say hi on Twitter @lifeofmle
             <div class="project-info">
               <h2>Continuous discovery for refining problems</h2>
 
-              <p class="lead">One of the most common queries for online delivery is "Where is my order?"</p>
+              <p class="lead">One of the most common queries for online delivery
+                is "Where is my order?"</p>
 
-              <p>Ran workshops and discovery research to identify opportunities for the product team to focus on. The moral of this story is to get in front of your customers so you can get better context.</p>
+              <p>Ran workshops and discovery research to identify opportunities
+                for the product team to focus on. The moral of this story is to
+                get in front of your customers so you can get better context.</p>
             </div>
           </div>
         </div>
@@ -153,10 +166,14 @@ Feel free to say hi on Twitter @lifeofmle
 
               <p class="lead">Redesigning the Telegraph website</p>
 
-              <p>My role as a UX designer is helping with bringing in user research and insights to our designs, wireframing and prototyping. 
-                The new responsive web site responsible for delivering content to millions of visitors every day.</p>
+              <p>My role as a UX designer is helping with bringing in user 
+                research and insights to our designs, wireframing and prototyping. 
+                The new responsive web site responsible for delivering content
+                to millions of visitors every day.</p>
 
-              <p>I always wanted to work on products that had a positive impact on many people. I am fortunate to be working with a great team and I am extremely proud of the work that we did.</p>
+              <p>I always wanted to work on products that had a positive 
+                impact on many people. I am fortunate to be working with a 
+                great team and I am extremely proud of the work that we did.</p>
             </div>
           </div>
         </div>
@@ -169,7 +186,8 @@ Feel free to say hi on Twitter @lifeofmle
 
       <section id="givingback">
         <h2>Giving back to the community</h2>
-        <p>For the year I created a  plugins for Sketch and Figma to make myself and my team efficient in their daily tasks.</p>
+        <p>For the year I created a  plugins for Sketch and Figma to make
+          myself and my team efficient in their daily tasks.</p>
         <div class="plugins">
           <div class="plugin">
             <img src="assets/images/plugin-symbolinsert.png" alt="Symbol Insert icon"  data-aos="fade-up" data-aos-anchor="#telegraph" data-aos-anchor-placement="bottom-bottom"/>
@@ -187,8 +205,13 @@ Feel free to say hi on Twitter @lifeofmle
             <p class="caption">Add notes in Figma</p>
           </div>
         </div>
-        <p>I write so that I can articulate my thoughts and experiences. Writing online makes that knowledge easy to share with others.</p>
-        <p>Public speaking has not always been easy for me because I was shy and English was my second language. Through my career as a consultant, I did presentations to senior stakeholders and clients. However, I didn't enjoy public speaking until my manager Jane Austin encourage me to talk about design for the first time.</p>
+        <p>I write so that I can articulate my thoughts and experiences. 
+          Writing online makes that knowledge easy to share with others.</p>
+        <p>Public speaking has not always been easy for me because I was shy
+          and English was my second language. Through my career as a consultant,
+          I did presentations to senior stakeholders and clients. However, I 
+          didn't enjoy public speaking until my manager Jane Austin encourage 
+          me to talk about design for the first time.</p>
       </section>
 
       <div class="writing">
